--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "name": "X-TENSION",
     "version": "1.0",
     "description": "A mental wellness Chrome extension",
+    "permissions": ["storage"],
     "background": {
         "scripts": ["background.js"],
         "persistent": false
