--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,22 @@
   {
     "name": "X-TENSION",
     "version": "1.0",
+    "content_scripts": [
+      {
+        "matches": ["http://*/*", "https://*/*"],
+        "js": [
+          "js/app.js"
+        ]
+      }
+    ],
     "description": "A mental wellness Chrome extension",
-    "permissions": ["storage"],
+    "permissions": ["storage", "notifications"],
     "background": {
-        "scripts": ["background.js"],
+        "scripts": ["js/background.js"],
         "persistent": false
+    },
+    "browser_action": {
+      "default_icon": "icon.png"
     },
     "manifest_version": 2
   }
