added stepNotif between :50 and :60

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
       {
         "matches": ["http://*/*", "https://*/*"],
         "js": [
-          "js/app.js"
+          "js/stepNotif.js"
         ]
       }
     ],
